--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -35,3 +35,6 @@
   backup_cleanup_scheduler:
     cron: '<%= Random.rand(0..59) %> <%= Random.rand(3..5) %> * * *'
     class: Scheduler::BackupCleanupScheduler
+  stats_scheduler:
+    cron: '* * * * *'
+    class: Scheduler::StatsScheduler
